# guardia

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  main.rs
src/ai/: agent_prompts.rs  agents.rs  context_window.rs  evidence.rs  judge.rs  memory.rs  mod.rs  orchestrator.rs  privacy.rs  prompt.rs  react.rs  specialist_agents.rs  tools.rs
src/ai/knowledge/: cve_db.rs  cwe_rules.rs  mod.rs
src/ai/verify/: mod.rs  sandbox.rs  symbolic.rs
src/config/: mod.rs
src/hooks/: mod.rs
src/report/: json.rs  mod.rs  sarif.rs  terminal.rs
src/scanner/: mod.rs  rules.rs  secret.rs
src/scanner/ast/: languages.rs  mod.rs  taint.rs  vuln_rules.rs
src/tui/: mod.rs  widgets.rs
tests/: integration_test.rs
tests/fixtures/: private_key.pem  safe_code.py  vuln_cmdi.py  vuln_sqli.py  vuln_xss.js  vulnerable_env  vulnerable_js.js  vulnerable_python.py
