[package]
name = "guardia"
version = "0.4.0"
edition = "2021"
authors = ["hacker4257"]
description = "AI-enhanced code security scanner — blazing fast secret detection with LLM-powered false positive filtering"
license = "MIT"
repository = "https://github.com/hacker4257/guardia"
homepage = "https://github.com/hacker4257/guardia"
documentation = "https://github.com/hacker4257/guardia#readme"
readme = "README.md"
keywords = ["security", "scanner", "secrets", "sast", "ai"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["tests/fixtures/*", ".github/*"]

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ignore = "0.4"
colored = "2"
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
rayon = "1"
indicatif = "0.17"

# AST parsing
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"

# AI / LLM
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

[profile.release]
opt-level = 3
lto = true
strip = true
